# educanopos

./: .gitignore  README.md  justfile  main.py  pyproject.toml  run-screen.sh  run.sh  settings.py
.github/workflows/: ci.yml
eda/: fase-asignacion-plazas.R  fase-concurso.R  fase-oposicion.R  previa.R  primera-prueba.R  segunda-prueba.R
lib/: board.py  cli.py  db.py  filters.py  logger.py  pub.py  screen.py  templates.py
static/css/: base.css  fonts.css
templates/: boards.csv  publication.md  results.csv  results.html
