[project]
name = "educanopos"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "peewee>=3.18.1",
    "prettyconf>=2.3.0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "telegramtk>=0.1.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = ["ipython>=9.3.0", "pytest>=8.4.1"]
prod = [
    "gunicorn>=23.0.0",
]
